--- a/icosoc/README
+++ b/icosoc/README
@@ -1,31 +1,20 @@
 
-      *************************************************************
-      * IcoSoC -- A PicoRV32-based SoC generator for the IcoBoard *
-      *************************************************************
+      ***************************************************************
+      * BlackSoC -- A PicoRV32-based SoC generator for the BlackIce *
+      ***************************************************************
 
 
-The IcoBoard is a Raspberry PI hat featuring the ICE40 HX8K fpga. It
-can be programmed using the IceStorm Open Source FPGA flow:
+The Blackice II is an ICE40 HX4k fpga but running as HX8K
+wnen programmed using the IceStorm Open Source FPGA flow:
 
-http://icoboard.org/
+http://mystorm.uk/
 http://www.clifford.at/icestorm/
 
+Blacksoc is based on icosoc for the icoboard.
+
 This SoC generator creates SoCs using the PicoRV32 processor core that run on
-the IcoBoard. Multiple IO standard interfaces are supported. The SoC has a
-console interface to the Raspberry Pi. (Run "icoprog -zZc2" on the Raspberry
-Pi to connect to the console. Note that the SoC stops when the console output
-buffer is full.)
-
-It is certainly possible to run the entire toolchain (including SoC generation)
-on the Raspberry Pi, but for this manual we assume that the SoC generation
-happens on a separate workstation and only "icoprog" is run directly on the
-Raspberry Pi.
-
-The generated makefiles assume that the Raspberry Pi can be connected to with
-"ssh pi@raspi" without password authentication (i.e. authentication using SSH
-keys). Note that "ssh pi@raspi" must connect to the Raspberry Pi within a few
-seconds, otherwise the SoC bootloader will timeout between programming the
-FPGA and uploading the application image.
+the Blackice II. Multiple IO standard interfaces are supported. The SoC has a
+console interface to the host PC. 
 
 Simply change into one of the examples/* directories and run "make run" to
 build and upload a SoC hardware/software bundle. You'll need the iCE40 and
@@ -80,8 +69,7 @@ The following statements are supported in the global section:
 board <board_name>
 ------------------
 
-Sets the board type. Currently supported values are "icoboard_gamma"
-and "icoboard".
+Sets the board type. Currently supported values are "blackice2".
 
 compressed_isa
 --------------
@@ -94,38 +82,6 @@ muldiv_isa
 
 Enable support for multiply/divide instructions. This will significantly
 increase the size of the processor core.
-
-flashmem
---------
-
-Map SPI flash into processor memory. Byte 0 of the flash is at 0x40000000.
-
-flashpmem
----------
-
-Use SPI flash as program memory. Executing code from the SPI flash is very
-slow! But it enables much larger programs to be used with the SoC. This
-will modify the boot loader and a different linker script will be used to
-link the program. Everything in the ELF section .text.sram will be placed
-in SRAM. Make sure that performance critical functions are placed in this
-ELF section.
-
-This implies the "flashmem" option. In addition to the mapping at 0x40000000
-this will map everything above 0x100000 (1MB) in the flash to 0x100000 in
-the processor address space.
-
-noflashboot
------------
-
-Do not attempt to load application from flash after timeout. Set when
-connecting via SSH (e.g. from "make run") may take longer than the timeout.
-
-fastflashboot
--------------
-
-Boot from flash right away. Do not wait for a firmware image via the console
-interface.
-
 
 IcoSoC Module Sections
 ======================
